--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -181,7 +181,7 @@
     </style>
 </head>
 
-<body class="bg-dark text-slate-300 font-sans flex min-h-screen lg:h-screen overflow-x-hidden">
+<body class="bg-dark text-slate-300 font-sans flex min-h-screen lg:h-screen overflow-x-hidden dashboard-page">
 
     <!-- Sidebar -->
     <aside
@@ -269,7 +269,7 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="flex-1 flex flex-col min-h-screen lg:h-full overflow-hidden relative">
+    <div class="flex-1 flex flex-col min-h-screen lg:h-full overflow-hidden relative dashboard-shell">
         <!-- Top Header with Navbar -->
         <header
             class="admin-topbar min-h-16 bg-gradient-to-r from-slate-900 to-slate-950 border-b border-slate-800 flex flex-wrap sm:flex-nowrap items-center justify-between gap-3 px-4 sm:px-6 py-3 sm:py-0 z-40 shadow-lg">
@@ -326,7 +326,7 @@
         </header>
 
         <!-- Main Scrollable Area -->
-        <main class="flex-1 overflow-y-auto p-4 sm:p-6 bg-gradient-to-br from-dark via-slate-900 to-slate-950">
+        <main class="flex-1 overflow-y-auto p-4 sm:p-6 bg-gradient-to-br from-dark via-slate-900 to-slate-950 dashboard-content">
 
             <!-- KPI Cards -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 md:gap-6 mb-8">
