--- a/login.html
+++ b/login.html
@@ -234,6 +234,40 @@
         </div>
     </div>
 
+    <footer class="bg-slate-950 border-t border-slate-800 py-10 px-6">
+        <div class="max-w-6xl mx-auto flex flex-col gap-8 md:flex-row md:items-start text-sm text-slate-400">
+            <div class="flex-1 space-y-3">
+                <div class="flex items-center gap-2">
+                    <span class="text-xl font-bold text-white tracking-tight">Secure<span class="text-primary">Tech</span></span>
+                    <span class="px-2 py-0.5 text-xs rounded-full bg-primary/10 text-primary border border-primary/30">Portal</span>
+                </div>
+                <p>Unified access for your admin and client workspaces with enterprise-grade encryption.</p>
+                <div class="flex items-center gap-4 text-xs text-slate-500">
+                    <span>&copy; 2026 SecureTech</span>
+                    <span>All rights reserved</span>
+                </div>
+            </div>
+            <div class="flex-1 grid grid-cols-2 gap-6">
+                <div>
+                    <p class="text-white font-semibold mb-3">Quick Links</p>
+                    <ul class="space-y-2">
+                        <li><a href="services.html" class="hover:text-primary transition-colors">Services</a></li>
+                        <li><a href="about.html" class="hover:text-primary transition-colors">About</a></li>
+                        <li><a href="contact.html" class="hover:text-primary transition-colors">Support</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <p class="text-white font-semibold mb-3">Trust & Security</p>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:text-primary transition-colors">Status</a></li>
+                        <li><a href="#" class="hover:text-primary transition-colors">Compliance</a></li>
+                        <li><a href="#" class="hover:text-primary transition-colors">Privacy</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <!-- Script to handle simulated login -->
     <script>
         function togglePassword() {
