--- a/signup.html
+++ b/signup.html
@@ -266,6 +266,40 @@
         </div>
     </div>
 
+    <footer class="bg-slate-950 border-t border-slate-800 py-10 px-6">
+        <div class="max-w-6xl mx-auto flex flex-col gap-8 md:flex-row md:items-start text-sm text-slate-400">
+            <div class="flex-1 space-y-3">
+                <div class="flex items-center gap-2">
+                    <span class="text-xl font-bold text-white tracking-tight">Secure<span class="text-primary">Tech</span></span>
+                    <span class="px-2 py-0.5 text-xs rounded-full bg-secondary/10 text-secondary border border-secondary/30">Account</span>
+                </div>
+                <p>Spin up new workspaces, invite your team, and stay ahead of threats with real-time guidance.</p>
+                <div class="flex items-center gap-4 text-xs text-slate-500">
+                    <span>&copy; 2026 SecureTech</span>
+                    <span>Security-first by design</span>
+                </div>
+            </div>
+            <div class="flex-1 grid grid-cols-2 gap-6">
+                <div>
+                    <p class="text-white font-semibold mb-3">Resources</p>
+                    <ul class="space-y-2">
+                        <li><a href="services.html" class="hover:text-secondary transition-colors">Why SecureTech</a></li>
+                        <li><a href="about.html" class="hover:text-secondary transition-colors">Our Story</a></li>
+                        <li><a href="contact.html" class="hover:text-secondary transition-colors">Get in touch</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <p class="text-white font-semibold mb-3">Need Help?</p>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="hover:text-secondary transition-colors">Privacy Center</a></li>
+                        <li><a href="#" class="hover:text-secondary transition-colors">Service Status</a></li>
+                        <li><a href="#" class="hover:text-secondary transition-colors">Live Chat</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script>
         function togglePasswordVisibility(inputId, buttonEl) {
             const input = document.getElementById(inputId);
