--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -139,7 +139,7 @@
     </style>
 </head>
 
-<body class="bg-dark text-slate-300 font-sans flex min-h-screen lg:h-screen overflow-x-hidden">
+<body class="bg-dark text-slate-300 font-sans flex min-h-screen lg:h-screen overflow-x-hidden dashboard-page">
 
     <!-- Sidebar -->
     <aside
@@ -217,7 +217,7 @@
     </aside>
 
     <!-- Main Content -->
-    <div class="flex-1 flex flex-col min-h-screen lg:h-full overflow-hidden relative">
+    <div class="flex-1 flex flex-col min-h-screen lg:h-full overflow-hidden relative dashboard-shell">
         <!-- Top Header with Navbar -->
         <header
             class="h-16 bg-gradient-to-r from-slate-900 to-slate-950 border-b border-slate-800 flex items-center justify-between px-6 z-40 shadow-lg">
@@ -259,7 +259,7 @@
         </header>
 
         <!-- Main Scrollable Area -->
-        <main class="flex-1 overflow-y-auto p-4 sm:p-6 bg-gradient-to-br from-dark via-slate-900 to-dark">
+        <main class="flex-1 overflow-y-auto p-4 sm:p-6 bg-gradient-to-br from-dark via-slate-900 to-dark dashboard-content">
 
             <!-- Status Cards -->
             <div class="grid grid-cols-1 md:grid-cols-3 gap-4 md:gap-6 mb-8">
